--- a/index.html
+++ b/index.html
@@ -535,11 +535,44 @@
     </footer>
     <div class="backdrop is-hidden" data-modal>
       <div class="modal">
-        <button class="modal-battom" type="button" data-modal-close>
+        <button class="modal-buttom" type="button" data-modal-close>
           <svg width="8" height="8">
-            <use href="./images/icons.svg#icon-close"></use>
+            <use class="modal-close" href="./images/icons.svg#icon-close"></use>
           </svg>
         </button>
+        <form class="modal-flex">
+          <h2>Leave your contacts and we will call you back</h2>
+          <div>
+            <label>Name<input type="text" name="name" /></label>
+          </div>
+          <div>
+            <label>Phone<input type="tel" name="phone" /></label>
+          </div>
+          <div>
+            <label>Email<input type="email" name="mail" /></label>
+          </div>
+          <div>
+            <label
+              >Comment
+              <textarea
+                name="comment"
+                rows="5"
+                placeholder="Text input"
+              ></textarea>
+            </label>
+          </div>
+          <label>
+            <input class="visually-hidden" type="checkbox" />
+            <span>
+              <svg><use></use></svg>
+            </span>
+            <span
+              >I accept the terms and conditions of the
+              <a href="">Privacy Policy</a></span
+            >
+          </label>
+          <button type="submit">Send</button>
+        </form>
       </div>
     </div>
     <script src="./js/modal.js"></script>
