--- a/index.html
+++ b/index.html
@@ -531,6 +531,19 @@
             </li>
           </ul>
         </div>
+        <div class="footer-subscribe">
+          <p>Subscribe</p>
+          <form class="footer-subscribe-block">
+            <input class="footer-input" type="email" placeholder="E-mail" />
+            <button class="button primary footer-button" type="submit">
+              <div class="flex-button">
+                Subscribe<svg class="airplane-icon" width="24" height="24">
+                  <use href="./images/icons.svg#icon-airplane"></use>
+                </svg>
+              </div>
+            </button>
+          </form>
+        </div>
       </div>
     </footer>
     <div class="backdrop is-hidden" data-modal>
@@ -541,37 +554,68 @@
           </svg>
         </button>
         <form class="modal-flex">
-          <h2>Leave your contacts and we will call you back</h2>
-          <div>
-            <label>Name<input type="text" name="name" /></label>
-          </div>
-          <div>
-            <label>Phone<input type="tel" name="phone" /></label>
-          </div>
-          <div>
-            <label>Email<input type="email" name="mail" /></label>
-          </div>
-          <div>
-            <label
-              >Comment
-              <textarea
-                name="comment"
-                rows="5"
-                placeholder="Text input"
-              ></textarea>
-            </label>
-          </div>
-          <label>
-            <input class="visually-hidden" type="checkbox" />
-            <span>
-              <svg><use></use></svg>
+          <h2 class="modal-title">
+            Leave your contacts and we will call you back
+          </h2>
+          <label class="modal-label"
+            >Name<input class="input" type="text" name="name" required /><svg
+              class="modal-icon"
+              width="18"
+              height="24"
+            >
+              <use href="./images/icons.svg#icon-person"></use>
+            </svg>
+          </label>
+          <label class="modal-label"
+            >Phone<input class="input" type="tel" name="phone" required /><svg
+              class="modal-icon"
+              width="18"
+              height="24"
+            >
+              <use href="./images/icons.svg#icon-phone"></use>
+            </svg>
+          </label>
+          <label class="modal-label"
+            >Email<input class="input" type="email" name="mail" required /><svg
+              class="modal-icon"
+              width="18"
+              height="24"
+            >
+              <use href="./images/icons.svg#icon-emai"></use>
+            </svg>
+          </label>
+          <label
+            >Comment
+            <textarea
+              class="input textarea"
+              name="comment"
+              rows="5"
+              placeholder="Text input"
+            ></textarea>
+          </label>
+          <label class="modal-checkbox-block">
+            <input
+              class="visually-hidden checkbox-none"
+              type="checkbox"
+              required
+            />
+            <span class="modal-checkbox">
+              <svg class="checkbox-icon" width="10" height="8">
+                <use href="./images/icons.svg#icon-check"></use>
+              </svg>
             </span>
             <span
               >I accept the terms and conditions of the
-              <a href="">Privacy Policy</a></span
+              <a
+                class="modal-link-polic"
+                href=""
+                rel="noopener noreferrer"
+                target="_blank"
+                >Privacy Policy</a
+              ></span
             >
           </label>
-          <button type="submit">Send</button>
+          <button class="button primary fg" type="submit">Send</button>
         </form>
       </div>
     </div>
