--- a/index.html
+++ b/index.html
@@ -615,7 +615,9 @@
               ></span
             >
           </label>
-          <button class="button primary fg" type="submit">Send</button>
+          <button class="button primary modal-btn-send" type="submit">
+            Send
+          </button>
         </form>
       </div>
     </div>
